Pull request #1118: AG-10992 fix popups width
Merge in EXTENSIONS/browser-extension from fix/AG-10992 to master

Squashed commit of the following:

commit 04124d85aaa6ebb4189cb074e8481c880795b52a
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Nov 2 15:22:21 2021 +0300

    add title

commit f64ce8eef50613892eb94e3a05bc853d5e782ec5
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Nov 2 14:43:36 2021 +0300

    fix popups width

--- a/Extension/src/pages/popup/components/Actions/actions.pcss
+++ b/Extension/src/pages/popup/components/Actions/actions.pcss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    max-width: 320px;
 
     @media (prefers-color-scheme: dark) {
         background-color: var(--black);
